--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "angular-mocks": "~1.2.x",
     "html5-boilerplate": "~4.3.0",
     "restangular": "~1.4.0",
-    "bootstrap": "~3.3.2"
+    "bootstrap": "~3.3.2",
+    "jquery": "~2.1.3"
   }
 }
